--- a/index.html
+++ b/index.html
@@ -99,17 +99,28 @@
 </div>
 
 <div id="upgrade-modal" class="modal">
-    <div class="modal-content" style="text-align: left;">
+    <div class="modal-content" style="text-align: center;">
         <h2 style="color: var(--pro); font-size: 18px; margin: 0 0 10px 0;">VIRE PRO AGORA ⚡</h2>
-        <div id="pay-area" style="text-align: center; margin-top: 20px;">
-            <div id="pix-loading" style="display:none; color: var(--primary);">Gerando QR Code Pix...</div>
-            <button id="btn-generate-pix" class="btn-adm" style="background: var(--primary); color: #000;" onclick="gerarPix()">PAGAR R$ 29,90 VIA PIX</button>
-            <div id="pix-container" style="display:none;">
-                <div id="qrcode-img"></div>
-                <div id="pix-status">Aguardando Pagamento...</div>
-                <div class="pix-code-box" id="pix-copy-code" onclick="copyPix()">Clique para copiar o código Pix</div>
+        <p style="font-size: 12px; color:#aaa; margin-bottom: 20px;">Libere jogadores ilimitados e jogos de ida e volta.</p>
+
+        <div id="manual-pix" style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 12px; border: 1px solid var(--border);">
+            <div style="font-size: 14px; font-weight: 900; color: var(--gold); margin-bottom: 10px;">PAGUE VIA PIX - R$ 29,90</div>
+            
+            <div id="static-qrcode">
+                <i class="fas fa-qrcode" style="font-size: 80px; color: white; margin-bottom: 10px;"></i>
             </div>
+
+            <div class="pix-code-box" id="pix-manual-code" onclick="copyManualPix()" 
+                 style="background: #000; color: var(--primary); padding: 12px; border: 1px dashed var(--primary); cursor: pointer; font-size: 10px; word-break: break-all;">
+                 00020126360014BR.GOV.BCB.PIX0114SUACHAVEAQUI250800005303986540529.905802BR5920NOME6009CIDADE62070503***6304ABCD
+            </div>
+            <p style="font-size: 9px; color: #777; margin-top: 8px;">Clique no código acima para copiar</p>
         </div>
+
+        <button class="btn-adm" style="background: var(--pro); color: white; margin-top: 15px;" onclick="confirmarPagamento()">
+            <i class="fas fa-check-circle"></i> JÁ REALIZEI O PAGAMENTO
+        </button>
+
         <button class="btn-adm" style="background: none; color: #666;" onclick="document.getElementById('upgrade-modal').style.display='none'">VOLTAR</button>
     </div>
 </div>
