--- a/gerador.html
+++ b/gerador.html
@@ -2,29 +2,28 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Gerador de Cupons PRO</title>
+    <title>ADM - Gerador de Cupons</title>
     <style>
-        body { background: #05070a; color: white; font-family: sans-serif; text-align: center; padding: 50px; }
-        .card { background: #12161d; padding: 20px; border-radius: 15px; border: 1px solid #00ff88; display: inline-block; }
-        button { background: #00ff88; border: none; padding: 10px 20px; font-weight: bold; cursor: pointer; border-radius: 5px; }
-        #lista-cupons { margin-top: 20px; text-align: left; }
+        body { background: #05070a; color: white; font-family: sans-serif; text-align: center; padding: 40px; }
+        .box { background: #12161d; border: 1px solid #00ff88; padding: 20px; border-radius: 15px; display: inline-block; }
+        button { background: #00ff88; border: none; padding: 10px 20px; border-radius: 5px; font-weight: bold; cursor: pointer; }
+        .cupom { font-size: 24px; color: #00ff88; margin: 20px; font-family: monospace; }
+        li { list-style: none; background: #000; margin: 5px; padding: 10px; border-radius: 5px; }
     </style>
 </head>
 <body>
-    <div class="card">
-        <h2>GERAR NOVA CHAVE PRO</h2>
-        <button onclick="gerarChave()">GERAR E SALVAR</button>
-        <div id="chave-gerada" style="margin-top: 20px; font-size: 20px; color: #00ff88; font-weight: bold;"></div>
-    </div>
-
-    <div id="lista-cupons">
-        <h3>Chaves Ativas no Banco:</h3>
-        <ul id="ul-cupons"></ul>
+    <div class="box">
+        <h2>GERAR CHAVE PRO</h2>
+        <button onclick="gerar()">CRIAR NOVA CHAVE</button>
+        <div id="result" class="cupom"></div>
+        <hr>
+        <h4>Chaves Disponíveis no Banco:</h4>
+        <div id="lista"></div>
     </div>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js";
-        import { getFirestore, collection, addDoc, onSnapshot, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
+        import { getFirestore, collection, setDoc, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyBeJNb65kjFuC-qvbmvnNpBYZNcCG7Zjwg",
@@ -38,28 +37,14 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        window.gerarChave = async () => {
-            const caracteres = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
-            let codigo = 'PRO-';
-            for (let i = 0; i < 8; i++) {
-                codigo += caracteres.charAt(Math.floor(Math.random() * caracteres.length));
-            }
-
-            try {
-                // Salva o código como ID do documento para facilitar a busca
-                await setDoc(doc(db, "cupons", codigo), { criadoEm: new Date() });
-                document.getElementById('chave-gerada').innerText = codigo;
-                alert("Chave salva com sucesso!");
-            } catch (e) { alert("Erro ao salvar: " + e.message); }
+        window.gerar = async () => {
+            const cod = "PRO-" + Math.random().toString(36).substring(2, 9).toUpperCase();
+            await setDoc(doc(db, "cupons", cod), { status: "ativo" });
+            document.getElementById('result').innerText = cod;
         };
 
-        // Lista chaves existentes
         onSnapshot(collection(db, "cupons"), (snap) => {
-            const ul = document.getElementById('ul-cupons');
-            ul.innerHTML = "";
-            snap.forEach(doc => {
-                ul.innerHTML += `<li>${doc.id}</li>`;
-            });
+            document.getElementById('lista').innerHTML = snap.docs.map(d => `<li>${d.id}</li>`).join('');
         });
     </script>
 </body>
