--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="modal-content">
         <h2 style="color: var(--pro); font-size: 18px; margin: 0 0 10px 0;">VIRE PRO AGORA ⚡</h2>
         <div style="background: rgba(0,0,0,0.3); padding: 15px; border-radius: 10px; border: 1px solid #333;">
-            <div style="color: var(--gold); font-weight: 900; margin-bottom: 10px;">VALOR: R$ 29,90</div>
+            <div style="color: var(--gold); font-weight: 900; margin-bottom: 10px;">VALOR: R$ 19,90</div>
             
             <p style="font-size: 10px; color: #aaa;">1. Copie o PIX abaixo e pague:</p>
             <div class="pix-code-box" id="pix-manual-code" onclick="copyManualPix()">
@@ -161,7 +161,7 @@
     let currentMatchId = null;
 
         window.enviarComprovanteZap = () => {
-        const telefone = "55119XXXXXXXX"; // COLOQUE SEU WHATSAPP AQUI (DDI + DDD + NUMERO)
+        const telefone = "5512988600188"; // COLOQUE SEU WHATSAPP AQUI (DDI + DDD + NUMERO)
         const emailUsuario = currentUser ? currentUser.email : "Não identificado";
         const texto = `Olá! Acabei de fazer o PIX para o Plano PRO. %0A%0A📧 Minha conta: *${emailUsuario}*%0A%0A_Aguardando minha chave de ativação!_`;
     
